--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
+    "shortid": "^2.2.16",
     "sqlite3": "^5.1.7",
     "uuid": "^9.0.1"
   }
